--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.2",
     "dayjs": "^1.11.6",
     "element-plus": "^2.2.18",
-    "vue": "^3.2.38",
     "vue-router": "^4.1.5",
+    "vue3-carousel": "^0.2.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
