--- a/package.json
+++ b/package.json
@@ -2,26 +2,31 @@
   "name": "popeye-gym",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "dayjs": "^1.11.6",
-    "element-plus": "^2.2.18",
+    "lodash": "^4.17.21",
+    "roboto-fontface": "*",
+    "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vue3-carousel": "^0.2.5",
-    "vuex": "^4.1.0"
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vitejs/plugin-vue": "^3.1.2",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
-    "vite": "^3.0.9"
+    "vite": "^3.1.8",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-vuetify": "~2.5.8"
   }
 }
