front 통합 및 빌드

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VUE_APP_API_URI = 'http://localhost:3000/'
+
+VITE_PORT= 3000
+VITE_IP = 'http://localhost'
+VITE_API_URI = 'http://localhost:8082/'
