배포를 위한 도메인 설정

--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 NODE_ENV = 'production'
 
 VITE_PORT= 8080
-VITE_IP = 'http://localhost'
-VITE_API_URI = 'http://localhost:8080/'
+VITE_IP = 'http://popeye.cf'
+VITE_API_URI = 'http://popeye.cf:8080/'
